--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "7.0.1",
+    "react-router-dom": "5.0.0",
+    "react-scripts": "3.2.0",
+    "redux": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -13,6 +17,14 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "husky": {
+  "hooks": {
+    "pre-commit": "lint-staged"
+  }
+},
+"lint-staged": {
+  "src/**/*.js": "eslint"
+},
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -27,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^3.0.9",
+    "lint-staged": "^9.4.3",
+    "redux-devtools-extension": "2.13.8"
   }
 }
