--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "redux": "4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p start:* ",
+      "start:react": "react-scripts start",
+      "start:api": "npm run build && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,6 +47,7 @@
   "devDependencies": {
     "husky": "^3.0.9",
     "lint-staged": "^9.4.3",
+    "npm-run-all": "^4.1.5",
     "redux-devtools-extension": "2.13.8"
   }
 }
